cluster/apps/default/esphome/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  selector:
    app: esphome
  ports:
    - name: http
      protocol: TCP
      port: 6052
      targetPort: 6052
