cluster/apps/default/esphome/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: esphome
spec:
  ingressClassName: internal
  rules:
    - host: esphome.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: esphome
                port:
                  name: http
  tls:
    - hosts:
        - esphome.${SECRET_DOMAIN}
